- added "Advanced query syntax" link - index/browse/experiment pages - fixed #2599 - fixed small layout issues in "experiment" page
git-svn-id: svn://bar.ebi.ac.uk/trunk/arrayexpress-interface@14147 2913f559-6b04-0410-9a09-c530ee9f5186

--- a/webapp/src/main/webapp/assets/stylesheets/ae_browse-1.4.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae_browse-1.4.css
@@ -214,6 +214,10 @@ a:active .table_header_label {
     right: 5px;
 }
 
+#ae_adv_query_link {
+    float: right;
+}
+
 #ae_help_link,
 #ae_login_link,
 #ae_login_info {
