--- a/webapp/src/main/webapp/assets/stylesheets/ae_index-1.4.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae_index-1.4.css
@@ -69,6 +69,15 @@
     font-size: 11px;
 }
 
+#aer_adv_query_link {
+    float: left;
+    margin-top: 2px;
+}
+
+#aer_browse_link {
+    margin-top: 22px;
+}
+
 #aer_login_link,
 #aer_login_info,
 #aer_help_link {
@@ -86,6 +95,8 @@
     text-align: right;
 }
 
+#aer_adv_query_link img,
+#aer_browse_link img,
 #aer_login_link img,
 #aer_login_info img,
 #aer_help_link img {
